@@ -60,6 +60,8 @@ window.setTimeout(function () {
         group = '###_de_madsack';
       else if (document.querySelector('script[src*="/dfv.containers.piwik.pro/"]'))
         group = '###_de_dfv_medien';
+      else if (matchDomain(['aachener-nachrichten.de', 'aachener-zeitung.de', 'ga.de', 'rp-online.de', 'saarbruecker-zeitung.de', 'volksfreund.de']))
+        group = '###_de_rp_aachen_medien';// no fix
       else if (document.querySelector('meta[name^="cXenseParse:vrm-"]'))
         group = '###_de_vrm';
       else if (document.querySelector('link[href*="/assets.static-chmedia.ch/"]'))
