@@ -40,8 +40,6 @@
     "webRequestBlocking",
     "*://*.360dx.com/*",
     "*://*.60millions-mag.com/*",
-    "*://*.aachener-nachrichten.de/*",
-    "*://*.aachener-zeitung.de/*",
     "*://*.abc.es/*",
     "*://*.abendblatt.de/*",
     "*://*.abqjournal.com/*",
@@ -742,5 +740,5 @@
     "*://html.onlineviewer.net/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.1.7.0"
+  "version": "3.1.7.1"
 }
